[project]
name = "messageformat2"
authors = [{ name = "Tomas Roun", email = "tomas.roun8@gmail.com" }]
description = "Python implementation of Unicode MessageFormat 2.0"
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "i18n",
    "internationalization",
    "localization",
    "messageformat",
    "messageformat 2",
    "cldr",
    "gettext",
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
]
dependencies = ["Babel", "click"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "uv",
    "pytest",
    "pytest-snapshot",
    "pytest-cov",
    "ruff",
    "pyright",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material"]

[project.urls]
Homepage = "https://github.com/tomasr8/messageformat2"
Github = "https://github.com/tomasr8/messageformat2"

[project.scripts]
mf2 = "messageformat2.cli:cli"

[tool.pyright]
include = ["tests", "messageformat2"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN204",
    "ANN401",
    "COM812",
    "BLE001",
    "RET503",
    "ISC001",
    "N802",
    "N803",
    "N806",
    "N818",
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN001", "ANN201", "PLR2004"]

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.setuptools]
packages = ["messageformat2"]

[tool.setuptools.dynamic]
version = { attr = "messageformat2.__version__" }

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
