[project]
name = "messageformat2"
authors = [{ name = "Tomas Roun", email = "tomas.roun8@gmail.com" }]
description = "Python implementation of Unicode MessageFormat 2.0"
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "i18n",
    "internationalization",
    "localization",
    "messageformat",
    "messageformat 2",
    "cldr",
    "gettext",
]
license = { file = "LICENSE" }
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
]
dependencies = ["Babel==2.17.0", "click==8.3.1"]
dynamic = ["version"]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-snapshot==0.9.0",
    "pytest-cov==7.0.0",
    "ruff==0.14.10",
    "ty==0.0.5",
    "mkdocs==1.6.1",
    "mkdocstrings[python]==1.0.0",
    "mkdocs-material==9.7.1",
]
docs = ["mkdocs==1.6.1", "mkdocstrings[python]==1.0.0", "mkdocs-material==9.7.1"]

[project.urls]
Homepage = "https://github.com/tomasr8/messageformat2"
Github = "https://github.com/tomasr8/messageformat2"

[project.scripts]
mf2 = "messageformat2.cli:cli"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "ANN002",
    "ANN003",
    "ANN204",
    "ANN401",
    "COM812",
    "C901",
    "BLE001",
    "RET503",
    "ISC001",
    "N802",
    "N803",
    "N806",
    "N818",
    "PLR0912",
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN001", "ANN201", "PLR2004"]

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.hatch.build.targets.wheel]
packages = ["messageformat2"]

[tool.hatch.version]
path = "messageformat2/__init__.py"

[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"
